FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Stamped with new Quote flow, used in price rule lookups</description>
    <inlineHelpText>Account Country</inlineHelpText>
    <label>Account Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>