FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Record_Type_name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_name__c</fullName>
    <description>Created for SALDEV-1201</description>
    <formula>SBQQ__Account__r.RecordType.Name</formula>
    <label>Account Record Type name</label>
    <type>Text</type>
</CustomField>