FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>SBQQ__Opportunity2__r.Account_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>