FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Country__c</fullName>
    <description>BOPI-185 Used in product rule to add product option based on region</description>
    <formula>IF(ISBLANK( Ship_To_Account__c), SBQQ__Account__r.ShippingCountry, Ship_To_Account__r.ShippingCountry )</formula>
    <label>Account Shipping Country</label>
    <type>Text</type>
</CustomField>