FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Adjusted_Rate_present__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Rate_present__c</fullName>
    <description>Created for SALDEV-1131</description>
    <label>Adjusted Rate present</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Adj_Rate_not_equal_Usage_Rate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>