FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Amex_Attributes_Mismatched__c.field-meta.xml
<CustomField>
    <fullName>Amex_Attributes_Mismatched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is being set with custom script.</description>
    <inlineHelpText>This is being set with custom script.</inlineHelpText>
    <label>Amex Attributes Mismatched</label>
    <type>Checkbox</type>
</CustomField>