FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Auto_Added_By_QCP__c.field-meta.xml
<CustomField>
    <fullName>Auto_Added_By_QCP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via QCP.</description>
    <inlineHelpText>Updated via QCP.</inlineHelpText>
    <label>Auto Added By QCP</label>
    <type>Checkbox</type>
</CustomField>