FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/AutoRenewed_Completed__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewed_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box for an autorenewal quote.</description>
    <inlineHelpText>The Value gets stamped from flow when previous contract ends.</inlineHelpText>
    <label>AutoRenewed Completed</label>
    <type>Checkbox</type>
</CustomField>