FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Beta_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Beta_Product_Discount__c</fullName>
    <description>Created as part of BOPI-130</description>
    <inlineHelpText>Displays whether a Beta Product is included in a Quote Line with a Discount given</inlineHelpText>
    <label>Beta Product Discount</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Status__c</field>
        <operation>equals</operation>
        <value>Beta</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__AdditionalDiscount__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>