FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created from JIRA ticket: BOPI-32.</description>
    <inlineHelpText>Select a Billing Contact related to the Account Hierarchy</inlineHelpText>
    <label>Billing Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <errorMessage>Contact must be active and marked as the Billing contact on their Contact record.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Billing_Contact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Select the Billing Contact for this Client. Contact must be active and marked as the Billing contact on their Contact record.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Billing Contact)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>