FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Contact_background__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_background__c</fullName>
    <formula>Billing_Contact__r.FirstName + &apos; &apos; + Billing_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact background</label>
    <type>Text</type>
</CustomField>