FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Cancel_Clone_No_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Clone_No_Rate_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Field is used in CustomScript.</description>
    <inlineHelpText>The Field is used in CustomScript.</inlineHelpText>
    <label>Cancel Clone No Rate Change</label>
    <type>Checkbox</type>
</CustomField>