FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Client_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Legal_Entity_Name__c</fullName>
    <description>Created from JIRA ticket: BOPI-227.</description>
    <formula>SBQQ__Account__r.Client_Legal_Entity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Legal Entity Name</label>
    <type>Text</type>
</CustomField>