FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Concat_Order_SubGroup_Category__c.field-meta.xml
<CustomField>
    <fullName>Concat_Order_SubGroup_Category__c</fullName>
    <description>Store the Concatenated OrderId&apos;s Subgroup Ids.
No longer used
Was made OBS in production, updating in sandbox to match (MV 1/6/26)</description>
    <inlineHelpText>Value stamped from Flow.</inlineHelpText>
    <label>OBS_Concat Order SubGroup Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>