FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_has_Auto_Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_has_Auto_Renewal_Terms__c</fullName>
    <description>Contract has Auto Renewal Terms, used in automations and to identify this Contract as having auto renewal terms. This will require user to fill out the Renewal Term field (SBQQ Renewal Term). Replaces Auto_renewal__c</description>
    <inlineHelpText>Renewal terms should be for the length of the Contract if no Contract has NO auto renewal. Otherwise, the length of the term for the renewal.</inlineHelpText>
    <label>Contract has Auto Renewal Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>