FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Created from JIRA ticket: BOPI-240.</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>