FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Contract_URL__c</fullName>
    <description>Created from JIRA ticket: BOPI-227.</description>
    <inlineHelpText>Link to related contract document</inlineHelpText>
    <label>Contract URL</label>
    <type>Url</type>
</CustomField>