FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Count_usage_field_values__c.field-meta.xml
<CustomField>
    <fullName>Count_usage_field_values__c</fullName>
    <description>Created for ticket BOPI - 677</description>
    <label>Count usage field values</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.QL_count_usage_field_values__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>