FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/CPQ_Migration_Scenario__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Migration_Scenario__c</fullName>
    <description>Used for CPQ data migration only</description>
    <inlineHelpText>Used for CPQ data migration only</inlineHelpText>
    <label>CPQ Migration Scenario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>