FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Created for SALDEV-1123</description>
    <formula>Text(CurrencyIsoCode )</formula>
    <label>Currency</label>
    <type>Text</type>
</CustomField>