FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Current_Contract_Auto_Renewal_Field__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Auto_Renewal_Field__c</fullName>
    <description>To store the current contract Auto Renewal field value.BOPI-569</description>
    <inlineHelpText>To store the current contract Auto Renewal field value.BOPI-569</inlineHelpText>
    <label>Current Contract Auto Renewal Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>