FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-715 For debugging purposes, certain fields in the Quote Line Editor (QLE) should only be visible to Admin users. To avoid cluttering the QLE with unnecessary information, these fields can be accessible on demand by setting this field to true</description>
    <inlineHelpText>Enable &apos;Debug Mode&apos; on this quote by setting to true. This will reveal additional information on the QLE for admin users</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>