FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Default_Rate_Does_Not_Match_Original__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate_Does_Not_Match_Original__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for ticket BOPI-913</description>
    <label>Default Rate Does Not Match Original</label>
    <type>Checkbox</type>
</CustomField>