FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/DOM_Discount_Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>DOM_Discount_Requires_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <description>BOPI-773 For a quote that contains both the free version of Cross Border Payments (XB) and a Domestic Payments (DOM) line item, if the DOM line uses the &apos;Bank Transfer&apos; payment method and is discounted, that discount does not require an approval. In that scenario this field is set to true by the QCP custom script</description>
    <label>DOM Discount Requires Approval</label>
    <type>Checkbox</type>
</CustomField>