FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <description>Part of the Quick Start package. Used to dynamically set columns displayed within the Line Editor. If this field is included, picklist values reference the names of Field Sets on the Quote Line object</description>
    <inlineHelpText>Part of the Quick Start package. Used to dynamically set columns displayed within the Line Editor. If this field is included, picklist values reference the names of Field Sets on the Quote Line object</inlineHelpText>
    <label>QLE View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AQS_Standard</fullName>
                <default>true</default>
                <label>Standard View</label>
            </value>
            <value>
                <fullName>AQS_Approval_Request</fullName>
                <label>Approver View</label>
            </value>
            <value>
                <fullName>Read_Only_Line_Editor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>