FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/HCFeeConflict__c.field-meta.xml
<CustomField>
    <fullName>HCFeeConflict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-863 Used in QCP and Product Rules for Healthcare to allow Service Fee and Contingency Fee for different Ship To Accounts on a Quote</description>
    <label>HCFeeConflict</label>
    <type>Checkbox</type>
</CustomField>