FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Identical_CC_Country_Exist__c.field-meta.xml
<CustomField>
    <fullName>Is_Identical_CC_Country_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates this field with Custom Script. SALDEV-1374</description>
    <inlineHelpText>Updates this field with Custom Script.</inlineHelpText>
    <label>Is Identical CC Country Exist</label>
    <type>Checkbox</type>
</CustomField>