FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_MC_Visa_Pair_Exist__c.field-meta.xml
<CustomField>
    <fullName>Is_MC_Visa_Pair_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via CustomScript. SALDEV-1347</description>
    <inlineHelpText>Updated via CustomScript.</inlineHelpText>
    <label>Is MC/Visa Pair Exist</label>
    <type>Checkbox</type>
</CustomField>