FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/IsDupUSLoanProdAdded__c.field-meta.xml
<CustomField>
    <fullName>IsDupUSLoanProdAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Field is used in CustomScript.</description>
    <inlineHelpText>The Field is used in CustomScript.</inlineHelpText>
    <label>IsDupUSLoanProdAdded</label>
    <type>Checkbox</type>
</CustomField>