FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/IsSamePaymentMethodAdded__c.field-meta.xml
<CustomField>
    <fullName>IsSamePaymentMethodAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSamePaymentMethodAdded</label>
    <type>Checkbox</type>
</CustomField>