FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Multiple_Ship_to_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Ship_to_Accounts__c</fullName>
    <description>Created for Jira ticket BOPI-383. Field appears in new quote screen flow and is required to ensure KYC is completed on all Ship To Accounts where necessary</description>
    <inlineHelpText>Will this contract include other locations or subsidiaries besides the Opportunity Account?</inlineHelpText>
    <label>Multiple Ship to Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>