FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/No_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Approvals_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-844 Checking this field allows the quote to by pass all approval rules</description>
    <inlineHelpText>Checking this field allows the quote to by pass all approval rules</inlineHelpText>
    <label>No Approvals Required</label>
    <type>Checkbox</type>
</CustomField>