FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/No_of_Lines_where_Rate_Details_Changed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Lines_where_Rate_Details_Changed__c</fullName>
    <description>Created for SALDEV-1084</description>
    <label># of Lines where Rate Details Changed</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Rate_Details_Changed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>