FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/No_of_Quote_Line_Groups__c.field-meta.xml
<CustomField>
    <fullName>No_of_Quote_Line_Groups__c</fullName>
    <description>Created for SALDEV-1403. Used to count the number of Quote Line Groups on a Quote. Used for Quote Document generation.</description>
    <label>No of Quote Line Groups</label>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>