FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/NonStandardTermsPresent__c.field-meta.xml
<CustomField>
    <fullName>NonStandardTermsPresent__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBSNonStandardTermsPresent</label>
    <type>Checkbox</type>
</CustomField>