FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Note_to_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Note_to_Pricing__c</fullName>
    <description>BOPI-848 This field is used on a screen flow displayed on the Preview Approval button to allow users to add comments on their approval requests</description>
    <inlineHelpText>Add comments to the Pricing approval request for your opportunity</inlineHelpText>
    <label>Note to Pricing</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>