FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Number_of_Rev_Share_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rev_Share_Products__c</fullName>
    <description>Created for BOPI-340</description>
    <inlineHelpText>Used to determine if a quote can be approved if it has 1 or more Rev Share products on the quote and the Rev Share Detail field on Opportunity has been filled out.</inlineHelpText>
    <label>Number of Rev Share Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Rev_Share__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>