FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Name__c</fullName>
    <description>BOPI-532 Field used in price rules to show Warnings on the QLE to fill ARR fields</description>
    <formula>SBQQ__Opportunity2__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type Name</label>
    <type>Text</type>
</CustomField>