FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>IF( SBQQ__Primary__c = FALSE, &quot;Not Primary&quot;, TEXT( SBQQ__Opportunity2__r.StageName ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>