FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Override_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Override_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BOPI-111</description>
    <inlineHelpText>Used to keep the flow from hitting a validation rule and not creating new records</inlineHelpText>
    <label>Override Validation Rule</label>
    <type>Checkbox</type>
</CustomField>