FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Owner_Expiration_Notice__c.field-meta.xml
<CustomField>
    <fullName>Owner_Expiration_Notice__c</fullName>
    <defaultValue>(&quot;90&quot;)</defaultValue>
    <description>Created for SALDEV-980.</description>
    <label>Owner Expiration Notice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>15 Days</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 Days</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 Days</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Days</label>
            </value>
            <value>
                <fullName>90</fullName>
                <default>true</default>
                <label>90 Days</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>120 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>