FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <description>Created from JIRA ticket: BOPI-227.</description>
    <label>PO #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>