FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Pricing_Team_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Team_Approval_Needed__c</fullName>
    <description>Created for BOPI-410</description>
    <inlineHelpText>Rollup Summary field showing a value if there is a quote line that has the &quot;No Usage Rate Present&quot; checkbox marked as true</inlineHelpText>
    <label>Pricing Team Approval Needed</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.No_Usage_Rate_Present__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>