FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Contact_background__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_background__c</fullName>
    <description>Created for SALDEV-1142</description>
    <formula>SBQQ__PrimaryContact__r.FirstName + &apos; &apos; + SBQQ__PrimaryContact__r.LastName</formula>
    <label>Primary Contact background</label>
    <type>Text</type>
</CustomField>