FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Product_Discount_10__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_10__c</fullName>
    <description>Created for BOPI-309
BOPI-773 Updated to 20%</description>
    <inlineHelpText>Used to determine if quote needs approval from Finance/Revenue based off of a Quote Line having a Discount &gt; 10%</inlineHelpText>
    <label>Product Discount &gt; 20%</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__TotalDiscountRate__c</field>
        <operation>greaterThan</operation>
        <value>20</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>