FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Publicity__c.field-meta.xml
<CustomField>
    <fullName>Publicity__c</fullName>
    <description>Created from JIRA ticket: BOPI-227.</description>
    <label>Publicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For Services Only</fullName>
            </value>
            <value>
                <fullName>For Services &amp; Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>