FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Bypass_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Quote_Bypass_DateTime__c</fullName>
    <description>BOPI-581 Sysadmin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Opp bypass checkbox formula field.</description>
    <inlineHelpText>Admin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Opp bypass checkbox formula field.</inlineHelpText>
    <label>Quote Bypass DateTime</label>
    <type>DateTime</type>
</CustomField>